--- a/index.html
+++ b/index.html
@@ -4,10 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style.css" type="text/css">
+    <link rel="icon" type="image/png" sizes="16x16" href="./resources/images/favicon-16x16.png">
     <title>Document</title>
 </head>
-<body>
-    <h2>Salazar Spots</h2>
+<title>Salazar Services</title>
+<body class = "bg-light">
+    <header>
+        <div class = "mainbanner">
+            <div class = "container">
+                <div id = "branding">
+                    <h1>Acme Web Design</h1>
+                </div>    
+                    <nav>
+                        <ul class="nav">
+                            <li class="nav-item"><a class="nav-link active" href="/index.html">HOME</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#services">SERVICES</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#rates">RATES</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#testimonials">TESTIMONIALS</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a></li>
+                        </ul>
+                    </nav>
+            </div>
+        </div>
+    </header>
+
+    <section id="showcase">
+        <div class="container">
+            <h1>Affordable Professional Web Design</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi blandit cursus risus at. Quis hendrerit dolor magna eget est lorem ipsum dolor sit. Urna neque viverra justo nec ultrices dui sapien eget mi. Habitant morbi tristique senectus et netus et. Non consectetur a erat nam at lectus. Pellentesque habitant morbi tristique senectus et netus et. Odio aenean sed adipiscing diam. Semper eget duis at tellus at urna condimentum. Lorem mollis aliquam ut porttitor leo a diam sollicitudin. Ac tortor dignissim convallis aenean et tortor at risus. Vitae tortor condimentum lacinia quis vel eros donec. Ut aliquam purus sit amet luctus venenatis lectus magna.</p>
+        </div>
+    </section>
+
+    <section id="newsletter">
+        <div class="container">
+            <h1>Subscribe to our newsletter</h1>
+            <form>
+                 <input type="email" placeholder="Enter Email...">
+                 <button type="submit" class="button_1">Subscribe</button>
+            </form>
+        </div>
+    </section>
+
+    <section id="boxes ">
+        <div class="container">
+            <div class="box">
+                <h3>Who Am I?</h3>
+                <p>I'd love the opportunity to voice your projects! As a career broadcaster, I've had the privilege of voicing countless audio compositions for various clients, show bits and promotional projects. I work from home and have a pro studio setup, allowing for a fast turnaround. Please take a listen to the examples and let me know if my sound/style fits your project. More demos can be found via <a href="" target="_blank">SoundCloud</a>. I'm easy to work with, so for any adjustments or modifications, don't hesitate to ask! Thanks and hope to hear from you soon!</p>
+            </div>
+            <div class="box">
+                <h3>Services</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim ut tellus elementum sagittis vitae et.</p>
+            </div>
+            <div class="box">
+                <h3>Rates</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim ut tellus elementum sagittis vitae et.</p>
+            </div> 
+            <div class="box">
+                <h3>Testimonials</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim ut tellus elementum sagittis vitae et.</p>
+            </div> 
+        </div>
+    </section>
     
+    <footer>
+        <span>&copy; Copyright 2022 - All Rights Reserved</span>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
